# sjson-cpp

./: .all-contributorsrc  .editorconfig  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  make.py  sonar-project.properties  version.h.in
.github/workflows/: build.yml  build_pull_request.yml  build_push.yml  main.yml  sonarcloud.yml  test_cpp_versions.yml
cmake/: CMakeCompiler.cmake
includes/sjson/: bind.h  error.h  parser.h  parser_error.h  parser_state.h  platform.h  reader.h  string_view.h  version.h  writer.h
includes/sjson/impl/: bit_cast.impl.h  compiler_utils.h  cstdlib.impl.h
tests/: CMakeLists.txt
tests/main_android/: AndroidManifest.xml  CMakeLists.txt
tests/main_android/app/: build.gradle.in
tests/main_android/app/src/main/cpp/: CMakeLists.txt  main.cpp
tests/main_android/java/com/sjson/unit_tests/: MainActivity.java
tests/main_emscripten/: CMakeLists.txt  main.cpp
tests/main_generic/: CMakeLists.txt
tests/main_ios/: CMakeLists.txt
tests/sources/: test_bind.cpp  test_parser.cpp  test_reader.cpp  test_string_view.cpp  test_writer.cpp
tests/validate_includes/: CMakeLists.txt  dummy.cpp  single_include.cpp.in
tools/: appveyor_ci.bat  setup_linux_compiler.sh  solar-scanner.properties
tools/release_scripts/: test_everything.py
tools/vs_visualizers/: sjson-cpp.natvis
